--- a/frontend/src/components/auth/LoginUserPage.module.scss
+++ b/frontend/src/components/auth/LoginUserPage.module.scss
@@ -2,9 +2,10 @@
 @use 'frontend/mixins';
 
 .container {
- @include mixins.container-center-style;
+  margin-top: 100px;
+  margin-bottom: 100px;
+  @include mixins.grid-center-style ;
 }
-
 .center_container {
   padding: 2rem;
   border: 1px solid variables.$input-border;
