--- a/frontend/src/components/miscellaneous/Footer.module.scss
+++ b/frontend/src/components/miscellaneous/Footer.module.scss
@@ -3,13 +3,16 @@
 .footer {
   background-color: variables.$primary-color;
   color: white;
-  padding: 1rem 0;
+  padding: 1.2rem 0;
   margin-top: auto;
+  box-shadow: 0 -2px 6px rgba(0, 0, 0, 0.1);
 
   .container {
     width: 90%;
     max-width: 1200px;
     margin: 0 auto;
     text-align: center;
+    font-size: 0.9rem;
+    opacity: 0.9;
   }
 }
