--- a/frontend/src/components/stations/EditMeasurementPage.module.scss
+++ b/frontend/src/components/stations/EditMeasurementPage.module.scss
@@ -18,5 +18,19 @@
       background-color: darken(variables.$error-color, 10%);
     }
   }
+  .error {
+    color: variables.$error-color;
+    font-size: 0.875rem;
+  }
+  .success {
+    color: variables.$success-color;
+    text-align: center;
+  }
+  .pollutant {
+    margin-bottom: 1.5em;
+    border-bottom: 1px solid #ccc;
+    padding-bottom: 1em;
+    position: relative;
+  }
 }
 
